Basic Devotions Table UI

--- a/src/RMS.Blazor/Pages/_Host.cshtml
+++ b/src/RMS.Blazor/Pages/_Host.cshtml
@@ -14,7 +14,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RMS.Blazor</title>
+    <title>Rest My Soul</title>
     <base href="~/" />
     
     <abp-style-bundle name="@BlazorLeptonXLiteThemeBundles.Styles.Global" />
